tests/multiubuntu/test-cases/TC_01/TC_01_egress_matchLabels_toPorts_singlePort.json
[
  {
    "verdict": "FORWARDED",
    "IP": {
      "source": "10.0.1.10",
      "destination": "10.96.0.23",
      "ipVersion": "IPv4"
    },
    "l4": {
      "UDP": {
        "source_port": 56740,
        "destination_port": 53
      }
    },
    "source": {
      "namespace": "multiubuntu",
      "labels": [
        "k8s:container=ubuntu-1",
        "k8s:group=group-1"
      ],
  "pod_name": "ubuntu-1-deployment-5ff5974cd4-pp8ef"
    },
    "destination": {
      "namespace": "kube-system",
      "labels": [
        "k8s:io.kubernetes.pod.namespace=kube-system",
        "k8s:k8s-app=kube-dns"
      ],
      "pod_name": "coredns-74ff55c5b-dxctr"
    }
  },
  {
    "verdict": "FORWARDED",
    "IP": {
      "source": "10.0.1.10",
      "destination": "10.0.1.108",
      "ipVersion": "IPv4"
    },
    "l4": {
      "TCP": {
        "source_port": 42908,
        "destination_port": 8080
      }
    },
    "source": {
      "namespace": "multiubuntu",
      "labels": [
        "k8s:container=ubuntu-1",
        "k8s:group=group-1"
      ],
      "pod_name": "ubuntu-1-deployment-5ff5974cd4-pp8ef"
    },
    "destination": {
      "namespace": "multiubuntu",
      "labels": [
        "k8s:container=ubuntu-4",
        "k8s:group=group-2"
      ],
      "pod_name": "ubuntu-4-deployment-5bbd4f6c69-xfluy"
    }
  }
]
